test/expected/v20/regression-delayed-formater.txt
/scripts/regression-delayed-formater.js:17
throw new Error('trace');
^

Error: trace
    at-hack Object.<anonymous> (/scripts/regression-delayed-formater.js:r:c)
    at-hack Module._compile (node:internal/modules/cjs/loader:r:c)
    at-hack Module._extensions..js (node:internal/modules/cjs/loader:r:c)
    at-hack Module.load (node:internal/modules/cjs/loader:r:c)
    at-hack Module._load (node:internal/modules/cjs/loader:r:c)
    at-hack Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:r:c)
    at-hack node:internal/main/run_main_module:r:c {
  [Symbol(originalCallSite)]: [
    CallSite {},
    CallSite {},
    CallSite {},
    CallSite {},
    CallSite {},
    CallSite {},
    CallSite {}
  ],
  [Symbol(mutatedCallSite)]: [
    CallSite {},
    CallSite {},
    CallSite {},
    CallSite {},
    CallSite {},
    CallSite {},
    CallSite {}
  ]
}

Node.js v20.15.1
